<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:theme="@style/Toolbar" android:id="@id/action_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/padding_normal" app:popupTheme="@style/Toolbar.PopupMenu" app:layout_scrollFlags="enterAlways|scroll">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="@dimen/padding_normal">
                <TextView android:id="@id/toolbar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/object_description" style="@style/ToolbarTitle" />
                <EditText android:id="@id/etTitle" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_small2" android:hint="@string/enter_name" android:inputType="textCapSentences" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/used_document" style="@style/Widget.Design.TextInputLayout" />
                <android.support.v7.widget.AppCompatSpinner android:entries="@array/snips" android:id="@id/Snip" android:paddingBottom="@dimen/padding_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-8.0dip" android:dropDownWidth="200.0dip" app:popupTheme="@style/Toolbar.PopupMenu" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView android:orientation="vertical" android:paddingTop="@dimen/padding_small" android:paddingBottom="72.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.CardView android:id="@id/cvDetails" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_small" app:cardElevation="2.0dip">
            <LinearLayout
                android:id="@id/llDocumentDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llVariant"
                android:orientation="vertical">
                <FrameLayout android:id="@id/flDetailsSubTitle" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <CheckedTextView android:textSize="16.0sp" android:gravity="center_vertical" android:id="@id/tvDetailsSubTitle" android:paddingLeft="@dimen/padding_normal" android:layout_width="wrap_content" android:layout_height="48.0dip" android:checked="true" android:text="@string/id_data" android:drawableRight="@drawable/ic_down" android:drawablePadding="@dimen/padding_small" />
                </FrameLayout>
                <LinearLayout
                    android:id="@id/llDocument"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llVariant"
                    android:orientation="vertical">

                    <EditText android:textSize="@dimen/text_large" android:gravity="center_vertical" android:id="@+id/etAddress" android:background="@null" android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/enter_address" android:drawableLeft="@drawable/pin" android:drawablePadding="16dp" android:inputType="textPostalAddress"/>
                    <EditText android:textSize="@dimen/text_large" android:gravity="center_vertical" android:id="@+id/etYear" android:background="@null" android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/enter_build_year" android:maxLength="4" android:drawableLeft="@drawable/calendar" android:drawablePadding="16dp" android:inputType="number"/>
                    <LinearLayout android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <ImageView android:paddingRight="@dimen/padding_tiny" android:layout_width="30dp" android:layout_height="match_parent" android:src="@drawable/category_of_danger"/>
                        <Spinner android:textSize="@dimen/text_large" android:gravity="center_vertical" android:entries="@array/responsibilities" android:id="@+id/etResponsibility" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:prompt="@string/enter_responsibility"/>
                    </LinearLayout>
                    <EditText android:textSize="@dimen/text_large" android:gravity="center_vertical" android:id="@+id/etSizes" android:background="@null" android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/sizes" android:drawableLeft="@drawable/size" android:drawablePadding="16dp" android:inputType="text"/>
                    <EditText android:textSize="@dimen/text_large" android:gravity="center_vertical" android:id="@+id/etFloors" android:background="@null" android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/floors" android:drawableLeft="@drawable/floor" android:drawablePadding="16dp" android:inputType="number"/>
                    <TextView android:textSize="@dimen/text_large" android:gravity="center_vertical" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/add_photo_to_front" android:drawableLeft="@drawable/photo" android:drawablePadding="16dp"/>
                    <LinearLayout android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <ImageView android:paddingRight="@dimen/padding_tiny" android:layout_width="30dp" android:layout_height="match_parent" android:src="@drawable/description"/>
                        <Spinner android:textSize="@dimen/text_large" android:gravity="center_vertical" android:entries="@array/appointments" android:id="@+id/sAppointment" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:prompt="@string/appointment"/>
                    </LinearLayout>
                    <include layout="@layout/separator"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
    <RelativeLayout android:layout_gravity="bottom" android:background="@color/pale_grey_two" android:paddingLeft="36.0dip" android:paddingRight="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnContinue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward" android:layout_alignParentRight="true" style="@style/Button.Borderless.Bottom.Next" />
    </RelativeLayout>
    <include layout="@layout/view_complex" />
</android.support.design.widget.CoordinatorLayout>