<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <include layout="@layout/actionbar"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ElementGroup">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_address" android:drawableLeft="@drawable/pin" style="@style/ElementHint"/>
            <ru.sviridov.techsupervision.widgets.GonaTextView android:id="@+id/tvAddress" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Element"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ElementGroup">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_build_year" android:drawableLeft="@drawable/calendar" style="@style/ElementHint"/>
            <ru.sviridov.techsupervision.widgets.GonaTextView android:id="@+id/tvYear" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Element"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ElementGroup">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_responsibility" android:drawableLeft="@drawable/category_of_danger" style="@style/ElementHint"/>
            <ru.sviridov.techsupervision.widgets.GonaTextView android:id="@+id/tvResponsibility" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Element"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ElementGroup">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/sizes" android:drawableLeft="@drawable/size" style="@style/ElementHint"/>
            <ru.sviridov.techsupervision.widgets.GonaTextView android:id="@+id/tvSizes" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Element"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ElementGroup">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/floors" android:drawableLeft="@drawable/floor" style="@style/ElementHint"/>
            <ru.sviridov.techsupervision.widgets.GonaTextView android:id="@+id/tvFloors" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Element"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ElementGroup">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/appointment" android:drawableLeft="@drawable/description" style="@style/ElementHint"/>
            <ru.sviridov.techsupervision.widgets.GonaTextView android:id="@+id/tvAppointment" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Element"/>
        </LinearLayout>
        <include layout="@layout/separator"/>
    </LinearLayout>
</ScrollView>
