<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:theme="@style/Toolbar" android:id="@id/action_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/padding_normal" app:popupTheme="@style/Toolbar.PopupMenu" app:layout_scrollFlags="enterAlways|scroll">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="@dimen/padding_normal">
                <TextView android:id="@id/toolbarOrganization_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Org_description" style="@style/ToolbarTitle" />
                <EditText android:id="@id/etOrganizationTitle" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_small2" android:hint="@string/enter_Org_name" android:inputType="textCapSentences" />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView android:orientation="vertical" android:paddingTop="@dimen/padding_small" android:paddingBottom="72.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.v7.widget.CardView android:id="@id/cvOrganizationDetails" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_small" app:cardElevation="2.0dip">
        <LinearLayout
            android:id="@id/llOrganizationDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llOrganizationVariant"
            android:orientation="vertical">
        <LinearLayout
            android:id="@id/llOrganization"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llOrganizationVariant"
            android:orientation="vertical">
        <EditText android:textSize="@dimen/text_large" android:gravity="center_vertical" android:id="@+id/etOrganizationAddress" android:background="@null" android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/enter_Org_address" android:drawableLeft="@drawable/pin" android:drawablePadding="16dp" android:inputType="textPostalAddress"/>
        <EditText android:textSize="@dimen/text_large" android:gravity="center_vertical" android:id="@+id/etOrganizationYear" android:background="@null" android:paddingLeft="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="@dimen/height_doc_item" android:hint="@string/enter_Org_build_year" android:maxLength="4" android:drawableLeft="@drawable/calendar" android:drawablePadding="16dp" android:inputType="number"/>

        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
    <RelativeLayout android:layout_gravity="bottom" android:background="@color/pale_grey_two" android:paddingLeft="36.0dip" android:paddingRight="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnContinue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward" android:layout_alignParentRight="true" style="@style/Button.Borderless.Bottom.Next" />
    </RelativeLayout>
    <include layout="@layout/view_complex" />
</android.support.design.widget.CoordinatorLayout>